--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-server.port=8093
 spring.application.name=crm-discovery
+server.port=8093
 
+#Logging
+logging.level.root = info
+logging.pattern.console = %d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger{36} - %msg%n
+logging.path = logs
+logging.file = ${logging.path}/log.log
+logging.pattern.file = %d{ISO8601} %magenta([%thread]) %highlight(%-5level) %logger{36} - %msg%n
+
+#Eureka
 eureka.client.register-with-eureka=false
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8093/eureka}
