--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@
 applications:
   - name: crm-discovery
     buildpack: java_buildpack
-    path: target/crm-discovery.0.0.1-SNAPSHOT.jar
+    path: target/crm-discovery-0.0.1-SNAPSHOT.jar
     memory: 512M
     disk_quota: 256M
